--- a/gb/23/9/7/n14068742.md
+++ b/gb/23/9/7/n14068742.md
@@ -1,51 +1,51 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>海葵台风致停电 台东一养鸡场2万只鸡闷毙</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/09/id14068743-634044-600x400.jpg" />
 <h6>台东一家蛋鸡饲养户因海葵台风停电导致蛋鸡闷死2万只，将运至垃圾焚化场焚化。（台东县政府提供）
 </h6>
 <hr>
-<p>【大纪元2023年09月07日讯】（大纪元记者龙芳台湾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B5%B7%E8%91%B5%E5%8F%B0%E9%A3%8E.md#1">海葵台风</a>侵袭，台东县卑南乡一家蛋鸡饲养户因台风导致<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%81%9C%E7%94%B5.md#1">停电</a>，场内通风设备无法启动，禽舍内通风不良，导致蛋鸡闷死2万只，粗估损失逾千万。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>县政府农业处表示，位于卑南乡的一处蛋鸡饲养户，为密闭式水帘式禽舍，饲养约5万4000只蛋鸡，年产约1,300万颗蛋。因海葵风灾造成<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%81%9C%E7%94%B5.md#1">停电</a>，场内通风设备无法启动，蛋鸡闷死超过2万只，粗估损失超过千万元以上，也造成近40公吨重的毙死鸡处理的难题。</p>
+<p>【大纪元2023年09月07日讯】（大纪元记者龙芳台湾台东报导）海葵台风侵袭，台东县卑南乡一家蛋鸡饲养户因台风导致停电，场内通风设备无法启动，禽舍内通风不良，导致蛋鸡闷死2万只，粗估损失逾千万。</p>
+<p>台东县政府农业处表示，位于卑南乡的一处蛋鸡饲养户，为密闭式水帘式禽舍，饲养约5万4000只蛋鸡，年产约1,300万颗蛋。因海葵风灾造成停电，场内通风设备无法启动，蛋鸡闷死超过2万只，粗估损失超过千万元以上，也造成近40公吨重的毙死鸡处理的难题。</p>
 <p>7日上午农业处长许家豪及环保局长郭建成前往蛋鸡场关心受灾户，并协调养猪协会化制车协助载运至垃圾焚化场焚化，目前已载运1车毙死鸡约3.28公吨，剩余毙死鸡将于隔天全部载运至垃圾焚化场焚化。◇</p>
 <p>责任编辑：昌英</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/13/n14033488.md#1">突然停电 黑龙江462头猪、湖北4千只鸡热死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066243.md#1">海葵台风席卷东台湾 强风大雨摄影镜头坚持到最后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066341.md#1">海葵台风来袭 周春米沿海视察：垫高路面解决水患</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066700.md#1">海葵台风造成台东市路树倾倒 国军协助清理</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/8/n14090638.md#1">台东知本幸福光廊点灯 温泉季起跑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/8/n14090500.md#1">关山夜访关山圳 11年来超过500人齐守 护富饶之地</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090379.md#1">漫步铁道活动登场 谢国梁承诺推动七堵发展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090208.md#1">风土植栽~变身~植物染 展现经济创作力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090252.md#1">蔡适应邀陈建仁视察基捷、军港迁移进度</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090261.md#1">宜兰县都会区原住民ilisin联合丰年舞祭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/13/n14033488.md#1">突然停电 黑龙江462头猪、湖北4千只鸡热死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/3/n14066243.md#1">海葵台风席卷东台湾 强风大雨摄影镜头坚持到最后</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/3/n14066341.md#1">海葵台风来袭 周春米沿海视察：垫高路面解决水患</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/4/n14066700.md#1">海葵台风造成台东市路树倾倒 国军协助清理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347164.md#1">罢梁投票通知单遭恶意丢弃 经查社区保全涉案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346650.md#1">巴贝多籍货轮搁浅兰屿 台东启动防污染作业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346653.md#1">台东红乌龙飘香意大利 运河畔展演东方茶席</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346457.md#1">基隆拆梁不孤单 台湾基进、罢梁联合扫街</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346401.md#1">推动数位学习有成 宜兰四所学校获国际认证</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346118.md#1">基隆罢梁电视说明会 戴璟安细数施政多项缺失</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/3/n11428903.md#1" target="_blank">林辉：周恩来冷酷无情 亲手给荣高棠扣叛徒帽子</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/14/n9840046.md#1" target="_blank">林辉：影射“毛太阳”《十万个为什么》被批</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086165.md#1">【未解之谜】影响中国命运的7位女人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089189.md#1">【未解之谜】阿南德再预言 大地震在路上？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081525.md#1">给汉武帝送了两任皇后、两位大将军！真实的平阳公主让你意想不到！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14085717.md#1">斯里兰卡男制香师转生为女孩 找到前世家人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/27/n14082314.md#1">蒋介石的车游和几个亲民小故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090043.md#1">【车评】闪烁中的豪华 2023 BMW 760i xDrive</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/5/n14088900.md#1">【中国禁闻】习家军内讧 福建帮蚕食浙江帮地盘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089369.md#1">【环球直击】消息指拜习11月在旧金山会面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089403.md#1">许家印忽悠马云投资12亿 结果打水漂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089422.md#1">中南海内斗不止 “李蔡不和”引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089818.md#1">许家印与习当局上演“图穷匕见”戏码</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/5/n14088903.md#1">李千娜黄尚禾宣布结婚 十指紧扣秀大钻戒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/5/n14089111.md#1">虚构战胜美军情节 《志愿军》票房惨遭滑铁卢</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/5/n14089024.md#1">周润发笑谈乌龙死讯 回应裸捐56亿身家传言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089870.md#1">周润发叹中国电影审查多 网友担心他遭打压</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089939.md#1">再晒一家四口海边牵手合照 孙俪感慨时光飞逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/4/n14088019.md#1">泡好咖啡的第一步 避免这11个易犯错误</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078551.md#1">这些癌症突然不医而愈 医生这样解释原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14064992.md#1">药补不如食补！2款补血汤水让五脏六腑都造血</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063024.md#1">小孩长不高都是父母亲遗传的问题？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/5/n14088627.md#1">为何穿着很重要？ 专家解析服装规定的意义</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342225.md#1">《对我而言，你是珍贵的》：家之所以为家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345934.md#1">【新闻欣视角】北京政局或失控 美国预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345929.md#1">【时事金扫描】针对中共 美军两大台海密战计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345864.md#1">【新闻大破解】十月惊奇在中东 以色列打台湾牌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1">中国经济大萧条 大量实体店十一门庭冷落</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344745.md#1">女星李一桐搭机光脚蹭座垫 视频曝光引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/7/n14068742.htm">海葵台风致停电 台东一养鸡场2万只鸡闷毙</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068742.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/7/n14068742.htm">海葵台风致停电 台东一养鸡场2万只鸡闷毙</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/9/7/n14068742.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
